[package]
name = "renderer"
version = "0.1.0"
authors = ["Corendos <corentin.godeau37@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.16.0"
vulkano-shaders = "0.16.0"
image = "0.21"
vulkano-win = "0.16.0"
winit = "0.19.0"
cgmath = "0.17.0"
serde = { version = "1.0.104", features = ["derive"] }
toml = "0.5.6"
rand = "0.7.3"